k8s/namespace-preview.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: health-watchers-preview
  labels:
    app.kubernetes.io/name: health-watchers
    app.kubernetes.io/managed-by: kubectl
    environment: preview
