k8s/namespace-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: health-watchers-staging
  labels:
    app.kubernetes.io/name: health-watchers
    app.kubernetes.io/managed-by: kubectl
    environment: staging
